--- a/HRMS/HRMS.csproj
+++ b/HRMS/HRMS.csproj
@@ -8,6 +8,7 @@
 	
 	<ItemGroup>
     <PackageReference Include="bootstrap" Version="5.3.3" />
+    <PackageReference Include="ClosedXML" Version="0.104.2" />
     <PackageReference Include="FontAwesome" Version="4.7.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
   </ItemGroup>
