--- a/HRMS/HRMS.csproj
+++ b/HRMS/HRMS.csproj
@@ -11,6 +11,9 @@
     <PackageReference Include="ClosedXML" Version="0.104.2" />
     <PackageReference Include="FontAwesome" Version="4.7.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="PDFsharp" Version="6.1.1" />
+    <PackageReference Include="PDFsharp-MigraDoc" Version="6.1.1" />
   </ItemGroup>
 	
 </Project>
